# result

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
lib/cmake-modules/: CodeCoverage.cmake
src/: result.hpp
test/: test.cpp
